--- a/codeway/style.css
+++ b/codeway/style.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&family=Raleway:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap');
 :root{
     --main-color: #5BCD65;
+    --second-color: #131313;
+    --third-color: rgba(141, 141, 141, 0.12);
 }
 *{
     margin: 0;
@@ -16,7 +19,7 @@ header{
     justify-content: flex-end;
     align-items: center;
     padding: 10px 10%;
-    background: rgba(135, 135, 135, 0.12);
+    background: var(--third-color)
 }
 #logo{
     margin-right: auto;
@@ -25,7 +28,7 @@ header{
 /* Links */
 .links{
     position: relative;
-    font-family: 'Fira Sans', sans-serif;
+    font-family: 'Dosis', sans-serif;
     color: #5BCD65;
     text-decoration: none;
     font-weight: 500;
@@ -42,15 +45,17 @@ header{
 /* End links edit */
 /* Section 1 */
 .section1{
-    font-family: 'Raleway', sans-serif;
-    background-image: url(hero.png);
-    background-size: 100%;
+    font-family: 'Dosis', sans-serif;
+    background-image: url(main.jpg);
+    background-size: 85%;
+    background-attachment: fixed;
+    background-position: right;
     background-repeat: no-repeat;
     height: 90vh;
     display: flex;
 }
 .section1 a{
-    font-family: 'Fira Sans', sans-serif;
+    font-family: 'Dosis', sans-serif;
     width: auto;
     position: absolute;
     background: #5BCD65;
@@ -94,6 +99,25 @@ header{
     border-color: #5BCD65;
     font-size: 15pt;
     color: #5BCD65;
+    padding: 5px;
+}
+.logoHTML{
+    align-items: center;
+    margin-left: 180px;
+    padding-bottom: 50px;
+    width: 25%;
+}
+.logoCSS{
+    align-items: center;
+    margin-left: 100px;
+    padding-bottom: 50px;
+    width: 37%;
+}
+.logoJS{
+    align-items: center;
+    margin-left: 200px;
+    padding-bottom: 50px;
+    width: 20%;
 }
 /* End of section 2 */
 /* footer */
@@ -103,5 +127,12 @@ footer{
     position: absolute;
 }  
 footer p{
+    font-family: 'Dosis', sans-serif;
     text-align: right;
+}
+footer a{
+    text-align: center;
+    text-decoration: none;
+    font-family: 'Fira Sans', sans-serif;
+    color: var(--second-color);
 }
