--- a/codeway/style.css
+++ b/codeway/style.css
@@ -5,6 +5,7 @@
     --main-color: #5BCD65;
     --second-color: #131313;
     --third-color: rgba(141, 141, 141, 0.12);
+    --menu-color: #f5f5f5;
 }
 *{
     margin: 0;
@@ -19,11 +20,15 @@ header{
     justify-content: flex-end;
     align-items: center;
     padding: 10px 10%;
-    background: var(--third-color)
+    background: var(--menu-color);
+    position: fixed;
+    width: 100%;
+    height: 70px;
 }
 #logo{
     margin-right: auto;
     align-items: left;
+    width: 180px;
 }
 /* Links */
 .links{
@@ -32,7 +37,7 @@ header{
     color: #5BCD65;
     text-decoration: none;
     font-weight: 500;
-    font-size: 25px;
+    font-size: 22px;
 }
 .nav_links{
     list-style: none;
@@ -51,7 +56,7 @@ header{
     background-attachment: fixed;
     background-position: right;
     background-repeat: no-repeat;
-    height: 90vh;
+    height: 100vh;
     display: flex;
 }
 .section1 a{
@@ -64,8 +69,10 @@ header{
     margin-top: 20px;
 }
 .content{
-    padding: 9%;
-    font-size: 25pt;
+    padding: 12%;
+    margin-top: 100px;
+    font-size: 28pt;
+    transition: .3s;
 }
 .section1 p{    
     margin: 10px;
@@ -73,7 +80,7 @@ header{
 }
 /* End section 1 */
 /* Section 2 */
-.section2{
+#section2{
     font-family: 'Fira Sans', sans-serif;
 }
 .section2-content{
@@ -81,13 +88,13 @@ header{
     margin: 50px 20px;
     padding: 40px 10px;
 }
-.section2 h1{
+#section2 h1{
     margin-top: 50px;
     text-align: center;
     font-size: 40pt;
     text-shadow: 2px 1px 5px rgb(41, 41, 41);
 }
-.section2 div{
+#section2 div{
     font-size: 15pt;
     margin-left: 30px;
 }
@@ -103,7 +110,7 @@ header{
 }
 .logoHTML{
     align-items: center;
-    margin-left: 180px;
+    margin-left: 170px;
     padding-bottom: 50px;
     width: 25%;
 }
