--- a/codeway/style-2.css
+++ b/codeway/style-2.css
@@ -24,36 +24,47 @@
     position: fixed;
     left: 0;
     margin-top: 70px;
-    width: 160px;
+    width: 260px;
     height: 100%;
+    scroll-behavior: smooth;
+    overflow: hidden;
+    transition: width 0.2s linear;
+    box-shadow: 0 20px 35px rgba(0, 0, 0, 0.4);
 }
 .side-menu h4{
+    margin-top: 10px;
     font-size: 15pt;
     text-align: center;
     line-height: 20px;
     user-select: none;
 }
-.slide-menu ul a{
-    display: block;
+.side-menu ul a{
     height: 100%;
     width: 100%;
-    color: #131313;
 }
-.slide-menu li a{
-    margin-top: 40px;
+.side-menu li a{
     cursor: pointer;
+    color: #131313;
 }
 ul li:hover a{
     padding-left: 10px;
 }
+.menu-links li{
+    margin-top: 20px;
+    
+}
 .content-course{
     font-size: 16pt;
     padding: 12%;
-    margin-top: -100px;
-    margin-left: -1%;
+    margin-top: -5vh;
+    margin-left: 300px;
     height: 100%;
     width: 100%;
     justify-content: center;
+}
+.about-html-code{
+    display: flex;
+    columns: 2;
 }
 .content-course h1{
     font-size: 30pt;
@@ -65,6 +76,6 @@ ul li:hover a{
     margin-bottom: 30px;
 }
 .content-course pre {
-    width: 600px;
+    width: 700px;
 }
 
