--- a/codeway/style.css
+++ b/codeway/style.css
@@ -24,6 +24,7 @@ header{
     position: fixed;
     width: 100%;
     height: 70px;
+    box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
 }
 #logo{
     margin-right: auto;
@@ -108,22 +109,22 @@ header{
     padding: 5px;
 }
 .logoHTML{
-    align-items: center;
+    justify-items: center;
     margin-left: 170px;
     padding-bottom: 50px;
     width: 25%;
 }
 .logoCSS{
-    align-items: center;
+    justify-items: center;
     margin-left: 100px;
-    padding-bottom: 50px;
-    width: 37%;
+    padding-bottom: 58px;
+    width: 35%;
 }
 .logoJS{
-    align-items: center;
+    justify-items: center;
     margin-left: 200px;
-    padding-bottom: 50px;
-    width: 20%;
+    padding-bottom: 5px;
+    width: 25%;
 }
 /* End of section 2 */
 /* footer */
