--- a/codeway/style-2.css
+++ b/codeway/style-2.css
@@ -20,7 +20,7 @@
 }
 .side-menu{
     font-family: Dosis, sans-serif;
-    background-color:  #f5f5f5;
+    background-color: #f5f5f5;
     position: fixed;
     left: 0;
     margin-top: 70px;
@@ -106,4 +106,18 @@ ul li:hover .navigate{
 #znaczniki h2{
     line-height: 20vh; 
     margin-bottom: -50px;
+}
+footer {
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 4px 1%;
+    background: rgba(135, 135, 135, 0.12);
+}
+footer a {
+    text-decoration: none;
+    color: black;
+    font-weight: bolder;
+    margin: 20px;
 }
